# ig.xmr

./: README.md  readme.md
mobile/ig.xmr/: App.js  app.json  constants.js  globals.js  package-lock.json  package.json  xmr.js
mobile/ig.xmr/components/: FloatLabelTextInput.js  InstagramButton.js  InstagramVerifiedSvg.js
mobile/ig.xmr/components/svg/: InstagramCommentIcon.js  InstagramCreatePostIcon.js  InstagramDirectHeartIcon.js  InstagramHeartIcon.js  InstagramHeartIconSelected.js  InstagramHomeIcon.js  InstagramHomeIconSelected.js  InstagramLikeIcon.js  InstagramLikedIcon.js  InstagramMessageHeart.js  (+2 more)
mobile/ig.xmr/global/: GlobalContext.js
mobile/ig.xmr/screens/: AccessNavigator.js  DirectStackNavigator.js  LoginScreen.js  MainStackNavigator.js  SignupScreen.js  TabNavigator.js
server/: .gitignore  Cargo.toml
server/src/: httpkit.rs  init_database.sql  kit.rs  main.rs  models.rs  ws.rs  www.rs
server/src/rest/: mod.rs
server/src/rest/guest/: mod.rs
server/src/rest/guest/media/: mod.rs
server/src/rest/guest/user/: mod.rs
server/src/rest/private/: mod.rs
server/src/rest/private/accounts/: mod.rs
server/src/rest/private/direct/: mod.rs
server/src/rest/private/media/: mod.rs
server/src/rest/private/user/: mod.rs
server/static/scripts/: fn_types.js  ig_webkit.js  kit.js  navbar.js  types.js  xmr.js
server/static/scripts/web-render/: direct-render.js  home-render.js  post-render.js  profile-render.js  settings-render.js
server/static/styles/: general.css  main.css
server/templates/: index.html  login.html  signup.html
(+7 files in other folders)
