[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.4"
actix-web = { version = "4.4.1", features = ["openssl"] }
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "time", "chrono" ] }
sha2 = "0.10.8"
hex-literal = "0.4.1"
regex = "1.10.3"
base64 = "0.21.7"
image = "0.24.8"
rand = "0.8.5"
chrono = { version = "0.4.33", features = ["serde"] }
askama = "0.12.1"
actix-web-actors = "4.3.0"
actix = "0.13.3"
actix-ws = "0.2.5"
futures-util = "0.3.30"
openssl = { version = "0.10.64", features = ["v110"] }
actix-cors = "0.6.2"
dotenv = "0.15.0"
